buildpacks/dotnet/src/snapshots/invalid_path_error.snap
---
source: buildpacks/dotnet/src/errors.rs
---
[0;31m! Invalid configured application path[0m
[0;31m![0m
[0;31m! The configured application path `/nonexistent/path/MyApp.sln` does not exist or is not accessible.[0m
[0;31m![0m
[0;31m! This error occurs when the specified path:[0m
[0;31m! * Does not exist[0m
[0;31m! * Is not a file or directory[0m
[0;31m! * Cannot be accessed due to permissions[0m
[0;31m![0m
[0;31m! For more information, see:[0m
[0;31m! https://github.com/heroku/buildpacks-dotnet#solution-file[0m
